[tool.poetry]
name = "bingo-proxy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
bs4 = "^0.0.1"
fake_useragent = "^0.1.11"
requests = "^2.22"
awscli = "^1.16"
boto3 = "^1.9"
python-dotenv = "^0.10.3"
lxml = "^4.4"

[tool.poetry.dev-dependencies]
pylint = "^2.4"
rope = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
